--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8080
-spring.datasource.url = jdbc:mysql://localhost:3306/tienda
+spring.datasource.url = jdbc:mysql://localhost:3306/homebanking
 spring.datasource.username = root
 spring.datasource.password =
 spring.jpa.show-sql = true
