--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,4 @@
 server.port=8080
-spring.datasource.url = jdbc:mysql://localhost:3306/homebanking
-spring.datasource.username = root
-spring.datasource.password =
-spring.jpa.show-sql = true
-spring.jpa.hibernate.ddl-auto = update
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-server.tomcat.accesslog.enabled = true
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.datasource.url=jdbc:h2:mem:homebanking
